--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "extend": "~3.0.2",
     "ibm-cloud-sdk-core": "^0.3.3",
     "isstream": "~0.1.2",
+    "jsonwebtoken": "^8.5.1",
     "object.pick": "~1.3.0",
     "snyk": "^1.192.4",
     "websocket": "^1.0.28"
