--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "jsonwebtoken": "^8.5.1",
     "object.pick": "~1.3.0",
     "snyk": "^1.192.4",
+    "tunnel": "0.0.6",
     "websocket": "^1.0.28"
   },
   "engines": {
